--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ install:
 # script to run tests. Script can have many commands, one per line.
 script: 
   - python -m unittest discover -p "*_test.py"
+  - coverage run -m unittest discover -p "*_test.py"
+
+# Add a section to send the result to Codecov
+after_script:
+  - bash <(curl -s https://codecov.io/bash)
